themes/openstack_bootstrap/custom-sass/style.scss
/* Imports */

@import 'partials/variables';
@import '../bootstrap-sass/bootstrap.scss';

@import "compass/css3";
@import "compass/layout.scss";
@import "compass/reset/utilities";
@import "compass/typography";
@import "compass/utilities";

// Components
@import 'partials/globals';
@import 'partials/navbar';
@import 'partials/footer';
@import 'partials/social_icons';

/* Custom override */

/* === Custom mixins === */

@mixin font($size, $color, $weight){
  font-size: $size;
  color: $color;
  font-weight: $weight;
}

.not-front .main-container {
  @extend .container;
}

/* Front container */

.region-openstack-front-top-first {
  @extend .col-md-6;
  @extend .col-sm-12;
}

.region-openstack-front-top-second {
  @extend .col-md-6;
  @extend .col-sm-12;
}

.region-openstack-front-bottom-first {
  @extend .col-md-6;
  @extend .col-sm-12;
}

.region-openstack-front-bottom-second {
  @extend .col-md-6;
  @extend .col-sm-12;
}

.region-openstack-front-first {
  @extend .col-md-6;
  @extend .col-sm-12;
}

.region-openstack-front-second {
  @extend .col-md-3;
  @extend .col-sm-6;
}

.region-openstack-front-third {
  @extend .col-md-3;
  @extend .col-sm-6;
}

/*.openstack-front-top {
  @extend .container;
}*/

.openstack-front-container {
  @extend .container;
  margin-top: 80px;
}

/* === Hidden elements === */

.pane-groups-homepage-groups-find-nearby {
  display: none;
}

/* === Header styles ==== */

/* === Search block === */

.input-group-os {
  @extend .input-group-sm;
  .input-group-btn {
  }
  .input-group-btn {
    border-radius: 0px;
  }
  .input-group-btn > .btn {
    color: white;
    background: $red1;
    margin-left: 4px;
    padding-left: 20px;
    padding-right: 20px;
    border-radius: 4px;
  }
  .form-control {
    border-radius: 0px;
  }
}

.block-search {
  margin-bottom: 20px;
  .input-group {
    @extend .input-group-os;
  }
}

/* === Front page === */

.pane-groups-homepage-groups-homepage-welcome {
  font-size: 16px;
  color: #888;
  line-height: 1.4;
  a {
    color: #30739C;
    text-decoration: underline;
  }
}

/* === Button === */

.btn-default {
  background: #30739C;
  color: #FFF;
  &:hover {
    background: #2A4E68;
    color: #FFF;
  }
}

/* === Upcoming events block === */

.view-id-commons_events_upcoming {
  // Hide sort filter and event count
  .attachment-before,
  .view-filters {
    display: none;
  }
  .views-row {
    padding: 15px 0px;
    border-bottom: 1px solid #EBEFF4;
  }
  .views-row:hover {

  }
  .views-row-first {
    padding-top: 0px;
  }
  h3 {
    margin: 0px;
    padding: 0px;
  }
  h3 > a {
    color: #000;
    font-size: 14px;
    font-weight: 600;
  }
  .field-type-datetime {
    color: #DA422F;
    font-size: 10px;
  }
  .field-type-addressfield {
    color: #333;
    font-style: italic;
  }
}

/** Activity stream **/

.view-commons-activity-streams-activity {
  /*background: $blue0;*/
  padding: 10px 0px;
  margin-bottom: 20px;
  line-height: 1em;
  /* activity stream row */
  .views-row {
    @include clearfix();
    padding-left: 58px;
    padding-bottom: 18px;
    min-height: 50px;
    color: #888;
    div.user-picture {
      position: absolute;
      float: left;
      margin-left: -58px;
    }
    .user-picture img {
      width: 40px;
    }
    .views-field-timestamp {
      font-size: 10px;
      margin-top: 0.5em;
      color: #DA422F;
    }
    a {
      color: #30739C;
      text-decoration: underline;
    }
  }
  .more-link {
    display: none;
  }

}

/* === Groups page === */

.two-66-33 {
  @extend .container;
  .region-two-66-33-first {
    @extend .col-md-8;
  }
  .region-two-66-33-second {
    @extend .col-md-4;
  }
}

.page-node {
  h2.pane-title {
    color: #2A4E68;
    font-weight: 300;
    font-size: 18px;
    margin-bottom: 25px;
  }
  .pane-node-body {
    margin-top: 25px;
    font-size: 16px;
    color: #888;
    line-height: 1.4;
    a {
      color: #30739C;
      text-decoration: underline;
    }
  }
  .pane-node-field-resource-links {
    border-top: 1px dotted #C5E2EA;
    margin-top: 25px;
    padding-top: 25px;
    .property-title {
      background: #C4E0E9;
      display: inline-block;
      color: #254C7C;
      padding: 0px 10px;
    }
    a {
      color: #30739C;
      text-decoration: underline;
    }
  }
  .pane-node-group-group {
    margin-top: 25px;
    background: #EDF2F7;
    padding: 10px;
    border-radius: 4px;
    text-align: right;
    p {
      text-align: left;
    }
    .group.unsubscribe {
      font-size: 10px;
    }
  }
}

.view-profile-badges {
  h3 {
    color: #CF2F19;
    font-size: 16px;
    font-weight: 300;

  }
}

.profile-badges {
  list-style: none;
  padding-left: 0px;
  li {
    float: left;
    margin-right: 10px;
    margin-bottom: 10px;
  }
}

/* === Groups directory === */

.two-33-66 {
  @extend .container;
  .region-two-33-66-first {
    @extend .col-md-4;
  }
  .region-two-33-66-second {
    @extend .col-md-8;
  }
}

.pane-groups-directory-groups-directory-filter {
    .checkbox label {
      padding-left: 0px;
    }
}

.pane-groups-directory-groups-directory-list {
  .node-group {
    .user-picture {
      display: none;
    }
    h2 {
      margin-bottom: 10px;
    }
    .list-inline {
      padding-left: 0px;
      margin-left: 0px;
    }
    .links > li a,
    .links > li a:hover,
    .links > li a:focus {
      color: #8A959E;
      font-size: 12px;
      text-transform: uppercase;
      padding: 0px;
      background: none;
      line-height: 20px;
    }
  }
}

/* === Community banner === */

.community-banner-container {
  padding: 75px 0px;
  background: url(../images/community-banner.jpg) no-repeat scroll center center / cover transparent;
  min-height: 350px;
  color: #FFF;
  h3 {
    margin-top: 20px;
    margin-bottom: 25px;
    font-weight: 300;
    font-size: 30px;
  }
  p {
    font-weight: 400;
  }
}

a.community-btn {
  font-size: 16px;
  font-weight: 400;
  background: none repeat scroll 0% 0% transparent;
  border: 1px solid #FFF;
  border-radius: 3px;
  margin-top: 10px;
  padding: 8px 30px 8px 40px;
  color: #FFF;
  float: left;
}

.community-banner-first {
  @extend .col-md-6;
  @extend .col-sm-12;
}

.community-banner-second {
  @extend .col-md-6;
  @extend .col-sm-12;
}

/* === Community guides === */

.region-openstack-front-top-second {
  background: #EDF2F7;
  border-radius: 4px;
}

.pane-groups-homepage-groups-community-guides {
  padding: 20px;
  .pane-title {
    margin-top: 0px;
    color: #2A4E68;
    font-weight: 300;
    font-size: 20px;
  }
  ul.links {
    list-style: none;
    padding-left: 0px;
    li {
      border-bottom: 1px dotted #4D96C7;
      padding-bottom: 5px;
      margin-bottom: 5px;
      a {
        color: #4D96C7;
      }
    }
    li.last {
      border-bottom: 0px;
    }
  }
}

